Fix Config Setup

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
+    "load": "lightning-cli plugin start $(pwd)/nostr-control.js"
   },
   "keywords": [],
   "author": "",
