--- a/.github/workflows/formatter-tests.yml
+++ b/.github/workflows/formatter-tests.yml
@@ -17,5 +17,8 @@ jobs:
       with:
         node-version: '16'
 
+    - name: Install dependencies
+      run: npm ci
+
     - name: Run tests
-      run: node test
+      run: npm test
